[project]
name = "comersatz"
authors = [
    {name = "Dillon Barker", email = "dillon.barker@phac-aspc.gc.ca"},
]
maintainers = [
    {name = "Dillon Barker", email = "dillon.barker@phac-aspc.gc.ca"},
]
version = "0.1.0"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/dorbarker/comersatz"

[project.scripts]
comersatz = "comersatz:main"